# NeuralNetworkFramework

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: main.cpp
source/neurons/: BasicConnection.cpp  BasicConnection.h  BasicNeuron.cpp  BasicNeuron.h
source/neurons/connections/: BasicConnection.cpp  BasicConnection.h  Connection.cpp  Connection.h  OperatorConnection.h
source/signals/: Delegates.h  Signals.h
